--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
     "@angular/core": "~13.2.0",
+    "@angular/fire": "^7.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "firebase": "^9.6.5",
     "ngx-accessibility": "^0.1.12",
+    "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -29,7 +32,6 @@
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~3.8.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
